# meta-learning-framework

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
Univariate_ts/DiatomSizeReduction/: NaiveEnsemble_time_metrics.csv
meta_learning_framework/: __init__.py  base_model.py  base_models.py  exceptions.py  meta_classifier.py  meta_learning_model.py  metamodel.py  naive_ensemble.py  types.py  utils.py
meta_learning_framework/base_model/: base_model.py
meta_learning_framework/meta/: __init__.py  meta_classifier.py  meta_learning_ensemble.py
meta_learning_framework/meta_classifier/: meta_classifier.py  meta_learning_ensemble.py  meta_learning_model.py
meta_learning_framework/naive_ensemble/: __init__.py  naive_ensemble.py
meta_learning_framework/utils/: __init__.py  combiner.py  error_measurer.py  selector.py
src/: .gitignore  base_models.py  example.py  meta_nn.py  metamodel.py  naive-ensemble.py  naive_ensemble.py  regression.py  run_every_for_every_dataset.sh  tsc_example.py  utils.py
tests/: conftest.py  forecasting_example.py  regression.py  sklearn_regression_example.py  sktime_classification_example.py  test_base_model.py  tsc_classification_example.py
tests/Univariate_ts/CBF/: MetaModel_time_metrics.csv  NaiveEnsemble_time_metrics.csv
tests/base_model/: conftest.py  test_as_classifier.py  test_as_regressor.py  test_base_model.py
tests/meta/: conftest.py  test_mle.py  test_mle_classification.py
tests/meta_classifier/: test_mle_classification.py
(+25 files in other folders)
