[metadata]
# replace with your username:
name = meta_learning_framework_CAIO_UENO
version = 1.0.0
author = Caio Ueno
author_email = caiol.ueno@gmail.com
description = A framework to apply a meta learning algorithm at instance level (learn how to ensemble models)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CaioUeno/meta-learning-framework/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6